versioned_docs/version-4.0/client-api/content/_creating-document-store-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">  

* **Creating a Document Store** is the _first step_ that a RavenDB client application needs to make when working with RavenDB.

* We recommend that your Document Store implement the [Singleton Pattern](https://csharpindepth.com/articles/Singleton) as demonstrated in 
the example code [below](../../client-api/creating-document-store.mdx#creating-a-document-store---example).  
Creating more than one Document Store may be resource intensive, and one instance is sufficient for most use cases.  

* In this page:  
  * [Creating a Document Store - Configuration](../../client-api/creating-document-store.mdx#creating-a-document-store---configuration)  
  * [Creating a Document Store - Example](../../client-api/creating-document-store.mdx#creating-a-document-store---example)  
</Admonition>
## Creating a Document Store - Configuration

The following properties can be configured when creating a new Document Store:  
 
* **Urls** (required)  

    * An initial URLs list of your RavenDB cluster nodes that is used when the client accesses the database for the _first_ time.  

    * Upon the first database access, the client will fetch the [Database Group Topology](../../studio/database/settings/manage-database-group.mdx) 
    from the first server on this list that it successfully connected to. An exception is thrown if the client fails to connect with neither 
    of the servers specified on this list. The URLs from the Database Group Topology will supersede this initial URLs list for any future 
    access to that database.  

    * **Note**: Do not create a Document Store with URLs that point to servers outside of your cluster.  

    * **Note**: This list is not binding. You can always modify your cluster later dynamically, add new nodes or remove existing ones as 
    necessary. Learn more in [Cluster View Operations](../../studio/server/cluster/cluster-view.mdx#cluster-view-operations).  

* **[Database](../../client-api/setting-up-default-database.mdx)** (optional)  
  The default database which the Client will work against.  
  A different database can be specified when creating a [Session](../../client-api/session/opening-a-session.mdx) if needed.  

* **[Conventions](../../client-api/configuration/conventions.mdx)** (optional)  
  Customize the Client behavior with a variety of options, overriding the default settings.  

* **[Certificate](../../client-api/setting-up-authentication-and-authorization.mdx)** (optional)  
  X.509 certificate used to authenticate the client to the RavenDB server  

After setting the above configurations as necessary, call `.Initialize()` to begin using the Document Store.  

<Admonition type="warning" title="">
The Document Store is immutable - all above configuration are frozen upon calling .Initialize().  
Create a new document store object if you need different default configuration values.  
</Admonition>



## Creating a Document Store - Example

This example demonstrates how to implement the singleton pattern in the initialization of a Document Store, as well as how to set initial 
default configurations.

<TabItem value="document_store_holder" label="document_store_holder">
<CodeBlock language="csharp">
{`// The \`DocumentStoreHolder\` class holds a single Document Store instance.
public class DocumentStoreHolder
\{
    // Use Lazy<IDocumentStore> to initialize the document store lazily. 
    // This ensures that it is created only once - when first accessing the public \`Store\` property.
    private static Lazy<IDocumentStore> store = new Lazy<IDocumentStore>(CreateStore);

    public static IDocumentStore Store => store.Value;
    
    private static IDocumentStore CreateStore()
    \{
        IDocumentStore store = new DocumentStore()
        \{
            // Define the cluster node URLs (required)
            Urls = new[] \{ "http://your_RavenDB_cluster_node", 
                           /*some additional nodes of this cluster*/ \},

            // Set conventions as necessary (optional)
            Conventions =
            \{
                MaxNumberOfRequestsPerSession = 10,
                UseOptimisticConcurrency = true
            \},

            // Define a default database (optional)
            Database = "your_database_name",

            // Define a client certificate (optional)
            Certificate = new X509Certificate2("C:\\\\path_to_your_pfx_file\\\\cert.pfx"),

        // Initialize the Document Store
        \}.Initialize();

        return store;
    \}
\}
`}
</CodeBlock>
</TabItem>  




